Finish adding hadextracted features and improvign readability

--- a/FeatureExtractionModule/src/autoencoder_approach/autoencoder_classifiers-low-vs-high.ipynb
+++ b/FeatureExtractionModule/src/autoencoder_approach/autoencoder_classifiers-low-vs-high.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Classifiers\n",
+    "# Classifiers - low vs high difficulty\n",
     "Exploring different classifiers with different autoencoders."
    ]
   },
@@ -3292,137 +3292,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "simple_dense:\n",
-      "      phase  breathing  heartbeat  combined br hb  undercomplete    sparse  \\\n",
-      "0  0.475000   0.591667   0.641667        0.558333       0.450000  0.500000   \n",
-      "1  0.508333   0.650000   0.508333        0.541667       0.666667  0.583333   \n",
-      "2  0.541667   0.316667   0.516667        0.325000       0.550000  0.650000   \n",
-      "3  0.600000   0.425000   0.541667        0.416667       0.483333  0.541667   \n",
-      "4  0.475000   0.391667   0.333333        0.425000       0.591667  0.516667   \n",
-      "\n",
-      "       deep  contractive test id  \n",
-      "0  0.466667     0.475000   62i9y  \n",
-      "1  0.500000     0.608333   2gu87  \n",
-      "2  0.533333     0.608333   iz2ps  \n",
-      "3  0.658333     0.483333   1mpau  \n",
-      "4  0.550000     0.500000   7dwjy  \n",
-      "\n",
-      "\n",
-      "LSTM:\n",
-      "      phase  breathing  heartbeat  combined br hb  undercomplete    sparse  \\\n",
-      "0  0.550000   0.633333   0.591667        0.566667       0.508333  0.533333   \n",
-      "1  0.508333   0.583333   0.691667        0.625000       0.500000  0.525000   \n",
-      "2  0.491667   0.500000   0.500000        0.325000       0.508333  0.483333   \n",
-      "3  0.541667   0.291667   0.400000        0.475000       0.516667  0.500000   \n",
-      "4  0.483333   0.383333   0.500000        0.391667       0.475000  0.491667   \n",
-      "\n",
-      "       deep  contractive test id  \n",
-      "0  0.500000     0.508333   62i9y  \n",
-      "1  0.483333     0.558333   2gu87  \n",
-      "2  0.500000     0.583333   iz2ps  \n",
-      "3  0.500000     0.583333   1mpau  \n",
-      "4  0.500000     0.583333   7dwjy  \n",
-      "\n",
-      "\n",
-      "kNN:\n",
-      "      phase  breathing  heartbeat  combined br hb  undercomplete    sparse  \\\n",
-      "0  0.500000   0.441667   0.408333        0.466667       0.766667  0.783333   \n",
-      "1  0.641667   0.533333   0.433333        0.550000       0.483333  0.525000   \n",
-      "2  0.491667   0.500000   0.591667        0.508333       0.608333  0.516667   \n",
-      "3  0.525000   0.575000   0.433333        0.483333       0.550000  0.583333   \n",
-      "4  0.591667   0.591667   0.325000        0.383333       0.458333  0.383333   \n",
-      "\n",
-      "       deep  contractive test id  \n",
-      "0  0.800000     0.725000   62i9y  \n",
-      "1  0.583333     0.541667   2gu87  \n",
-      "2  0.600000     0.600000   iz2ps  \n",
-      "3  0.608333     0.583333   1mpau  \n",
-      "4  0.508333     0.466667   7dwjy  \n",
-      "\n",
-      "\n",
-      "SVC:\n",
-      "      phase  breathing  heartbeat  combined br hb  undercomplete    sparse  \\\n",
-      "0  0.566667   0.350000   0.500000        0.575000       0.500000  0.408333   \n",
-      "1  0.433333   0.366667   0.375000        0.316667       0.500000  0.516667   \n",
-      "2  0.466667   0.541667   0.541667        0.433333       0.500000  0.500000   \n",
-      "3  0.641667   0.516667   0.475000        0.458333       0.441667  0.516667   \n",
-      "4  0.466667   0.400000   0.491667        0.408333       0.408333  0.508333   \n",
-      "\n",
-      "       deep  contractive test id  \n",
-      "0  0.475000     0.541667   62i9y  \n",
-      "1  0.458333     0.516667   2gu87  \n",
-      "2  0.525000     0.608333   iz2ps  \n",
-      "3  0.583333     0.616667   1mpau  \n",
-      "4  0.391667     0.391667   7dwjy  \n",
-      "\n",
-      "\n",
-      "random_forest:\n",
-      "      phase  breathing  heartbeat  combined br hb  undercomplete    sparse  \\\n",
-      "0  1.000000   0.525000   0.408333        0.508333       1.000000  1.000000   \n",
-      "1  0.416667   0.466667   0.291667        0.458333       0.441667  0.433333   \n",
-      "2  0.408333   0.516667   0.583333        0.441667       0.550000  0.558333   \n",
-      "3  0.608333   0.508333   0.533333        0.591667       0.575000  0.533333   \n",
-      "4  0.358333   0.525000   0.441667        0.450000       0.416667  0.408333   \n",
-      "\n",
-      "       deep  contractive test id  \n",
-      "0  0.950000     1.000000   62i9y  \n",
-      "1  0.541667     0.391667   2gu87  \n",
-      "2  0.658333     0.583333   iz2ps  \n",
-      "3  0.633333     0.641667   1mpau  \n",
-      "4  0.391667     0.466667   7dwjy  \n",
-      "\n",
-      "\n",
-      "naive_bayesian:\n",
-      "      phase  breathing  heartbeat  combined br hb  undercomplete    sparse  \\\n",
-      "0  0.466667   0.600000   0.541667        0.641667       0.483333  0.500000   \n",
-      "1  0.600000   0.333333   0.575000        0.333333       0.541667  0.533333   \n",
-      "2  0.516667   0.316667   0.525000        0.333333       0.550000  0.533333   \n",
-      "3  0.558333   0.425000   0.350000        0.425000       0.425000  0.408333   \n",
-      "4  0.566667   0.408333   0.550000        0.416667       0.475000  0.516667   \n",
-      "\n",
-      "       deep  contractive test id  \n",
-      "0  0.375000     0.475000   62i9y  \n",
-      "1  0.658333     0.550000   2gu87  \n",
-      "2  0.466667     0.566667   iz2ps  \n",
-      "3  0.475000     0.541667   1mpau  \n",
-      "4  0.508333     0.600000   7dwjy  \n",
-      "\n",
-      "\n",
-      "XGBoost:\n",
-      "      phase  breathing  heartbeat  combined br hb  undercomplete    sparse  \\\n",
-      "0  1.000000   0.500000   0.441667        0.483333       1.000000  1.000000   \n",
-      "1  0.450000   0.400000   0.283333        0.458333       0.450000  0.441667   \n",
-      "2  0.383333   0.600000   0.533333        0.391667       0.541667  0.516667   \n",
-      "3  0.575000   0.508333   0.441667        0.508333       0.541667  0.583333   \n",
-      "4  0.416667   0.525000   0.475000        0.441667       0.500000  0.433333   \n",
-      "\n",
-      "       deep  contractive test id  \n",
-      "0  1.000000     1.000000   62i9y  \n",
-      "1  0.508333     0.458333   2gu87  \n",
-      "2  0.508333     0.533333   iz2ps  \n",
-      "3  0.541667     0.658333   1mpau  \n",
-      "4  0.366667     0.450000   7dwjy  \n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "for classifier in accuracies:\n",
-    "    print(classifier + \":\")\n",
-    "    print(pandas.DataFrame.from_dict(accuracies[classifier]))\n",
-    "    print(\"\\n\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 63,
    "metadata": {},
    "outputs": [
@@ -3499,6 +3368,8 @@
    "source": [
     "for classifier in accuracies:\n",
     "    print(classifier + \":\")\n",
+    "#     print(pandas.DataFrame.from_dict(accuracies[classifier]))\n",
+    "    # Using .to_string() gives nicer loooking results (doesn't split into new line)\n",
     "    print(pandas.DataFrame.from_dict(accuracies[classifier]).to_string())\n",
     "    print(\"\\n\")"
    ]
