--- a/FeatureExtractionModule/src/autoencoder_approach/Per task approach/NC/data test.ipynb
+++ b/FeatureExtractionModule/src/autoencoder_approach/Per task approach/NC/data test.ipynb
@@ -410,7 +410,7 @@
     }
    ],
    "source": [
-    "# calculate and plot the mean of all busy phase data\n",
+    "# calculate and plot the mean of all relaxed phase data\n",
     "phase1_mean = np.mean(phase1, axis=1)\n",
     "plt.figure(2)\n",
     "plt.plot(phase1_mean)\n",
