--- a/FeatureExtractionModule/src/autoencoder_approach/Per task approach/NC/data test.ipynb
+++ b/FeatureExtractionModule/src/autoencoder_approach/Per task approach/NC/data test.ipynb
@@ -282,11 +282,11 @@
     }
    ],
    "source": [
-    "# make a new array with only busy data\n",
+    "# make a new array with only busy phase and y data\n",
     "phase1 = phase[0::2]\n",
     "y1 = y[0::2]\n",
     "\n",
-    "# make a new array with only relaxed data\n",
+    "# make a new array with only relaxed phase and y data\n",
     "phase0 = phase[1::2]\n",
     "y0 = y[1::2]\n",
     "\n",
@@ -326,7 +326,7 @@
     }
    ],
    "source": [
-    "# plot some busy arrays\n",
+    "# plot some busy phase data\n",
     "plot_n = 40\n",
     "plt.figure(0)\n",
     "plt.figure(figsize=(20, 6))\n",
@@ -363,7 +363,7 @@
     }
    ],
    "source": [
-    "# plot some relaxed arrays\n",
+    "# plot some relaxed phase data\n",
     "plt.figure(1)\n",
     "plt.figure(figsize=(20, 6))\n",
     "for i in range(plot_n):\n",
@@ -410,7 +410,7 @@
     }
    ],
    "source": [
-    "# calculate and plot the mean of all relaxed phase data\n",
+    "# calculate and plot the mean of all busy phase data\n",
     "phase1_mean = np.mean(phase1, axis=1)\n",
     "plt.figure(2)\n",
     "plt.plot(phase1_mean)\n",
@@ -454,7 +454,7 @@
     }
    ],
    "source": [
-    "# calculate and plot the mean of all busy phase data\n",
+    "# calculate and plot the mean of all relaxed phase data\n",
     "phase0_mean = np.mean(phase0, axis=1)\n",
     "plt.figure(3)\n",
     "plt.plot(phase0_mean)\n",
@@ -498,7 +498,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Test KNN with phase data:"
+    "Test RF with phase data:"
    ]
   },
   {
@@ -518,8 +518,9 @@
     }
    ],
    "source": [
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "model = KNeighborsClassifier()\n",
+    "# from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "model = RandomForestClassifier() #KNeighborsClassifier()\n",
     "model.fit(phase_tr, y_tr.ravel())\n",
     "curr_acc = np.sum(model.predict(phase_te) == y_te.ravel()) / len(y_te.ravel())\n",
     "curr_acc"
@@ -570,7 +571,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Test KNN with breathing data:"
+    "Test RF with breathing data:"
    ]
   },
   {
@@ -581,7 +582,7 @@
     {
      "data": {
       "text/plain": [
-       "0.8333333333333334"
+       "1.0"
       ]
      },
      "execution_count": 18,
@@ -590,8 +591,8 @@
     }
    ],
    "source": [
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "model = KNeighborsClassifier()\n",
+    "# from sklearn.neighbors import KNeighborsClassifier\n",
+    "model = RandomForestClassifier()#KNeighborsClassifier()\n",
     "model.fit(breathing_tr, y_tr.ravel())\n",
     "curr_acc = np.sum(model.predict(breathing_te) == y_te.ravel()) / len(y_te.ravel())\n",
     "curr_acc"
@@ -605,7 +606,7 @@
     {
      "data": {
       "text/plain": [
-       "array([1., 0., 1., 1., 1., 0.])"
+       "array([1., 0., 1., 0., 1., 0.])"
       ]
      },
      "execution_count": 19,
